default/httpbin/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: httpbin
  namespace: default
spec:
  serviceName: httpbin
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin@sha256:599fe5e5073102dbb0ee3dbb65f049dab44fa9fc251f6835c9990f8fb196a72b
        ports:
        - containerPort: 80
          name: httpbin
