default/httpbin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - httpbin.desertbluffs.com
  rules:
    - host: httpbin.desertbluffs.com
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: httpbin
